update notebook clase 5

--- a/clase_05/statistics.ipynb
+++ b/clase_05/statistics.ipynb
@@ -23,14 +23,14 @@
     "**Tópicos** ✏️\n",
     "1. **Sesión 5**\n",
     "  * Fundamentos de Probabilidad\n",
-    "  * Variables Aleatorias y Funciones de Probabilidad\n",
-    "  * Retornos Financieros como Variables Aleatorias\n",
+    "  * Variables Aleatorias\n",
+    "  * Distribuciones Muestrales\n",
     "  ---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 67,
    "id": "9ccb5c2d",
    "metadata": {},
    "outputs": [],
@@ -39,6 +39,7 @@
     "import pandas as pd \n",
     "import numpy as np \n",
     "import seaborn as sns \n",
+    "import yfinance as yf\n",
     "\n",
     "# Configuro el background del plot a dark\n",
     "sns.set_style(\"dark\")"
@@ -53,12 +54,40 @@
     "\n",
     "### Definición de Probabilidad\n",
     "\n",
+    "La probabilidad es una función matemática que asigna, a ciertos subconjuntos de un espacio muestral, un número entre 0 y 1, que representa una medida del grado de certeza (o incertidumbre) con que ocurre un evento.\n",
+    "\n",
+    "Formalmente, se define un *espacio de probabilidad* como una triada definida como $(\\Omega,\\mathcal{F}, P)$ donde $\\Omega$ es el espacio muestral , es decir, el conjunto de todos los posibles resultados de un experimento aleatorio. $\\mathcal{F}$ es una $\\sigma$-álgebra sobre $\\Omega$, es decir, una colección de subconjjntos de $\\Omega$ (eventos) que cumple las siguientes propiedades : \n",
+    "\n",
+    "* $\\Omega\\in\\mathcal{F}$\n",
+    "  \n",
+    "* Si $A\\in\\mathcal{F}$, entonces $A^c \\in\\mathcal{F}$\n",
+    "\n",
+    "* Si $A_1, A_2,\\cdots, A_n \\in\\mathcal{F}$, entones $\\bigcup^{\\infty}_{i=1} A_i \\in\\mathcal{F}$\n",
+    "  \n",
+    "Además, $P:\\mathcal{F}\\to [0,1]$ es una medida de probabilidad, una función que satisface los *axiomas de Kolmogorov*. \n",
     "\n",
     "\n",
+    "### Axiomas de Kolmógorov\n",
     "\n",
-    "### Reglas de Probabilidad\n",
+    "Sean $A, B, A_i \\in\\mathcal{F}$, entonces\n",
     "\n",
-    "### Experimentos Aleatorios en Finanzas"
+    "* **Axioma 1:** No negatividad , $P(A)\\geq 0$\n",
+    "* **Axioma 2:** Normalizacion, $P(\\Omega)=1$\n",
+    "* **Axioma 1:** Aditividad Numerable, si los eventos son disjuntos (es decir $A_i \\cap A_j = 0$ si $i\\neq j$), entonces : \n",
+    "\n",
+    "\\begin{equation*}\n",
+    "P\\left( \\bigcup^{\\infty}_{i=1} A_i\\right) = \\sum_{i=1}^{\\infty}P(A_i)\n",
+    "\\end{equation*}\n",
+    "\n",
+    "A partir de los axiomas anteriores, se derivabn reglas útiles como las siguientes : \n",
+    "\n",
+    "* **Complemento** $P(A^c) = 1 - P(A)$\n",
+    "  \n",
+    "* **Unión** $P(A\\cup B) = P(A) + P(B) - P(A\\cap B)$\n",
+    "  \n",
+    "* **Monotonía** Si $A\\subseteq B$ entonces $P(A)\\leq P(B)$\n",
+    "\n",
+    "* **Probabilidad Condicional** $P(A|B) = \\frac{P(A\\cap B)}{P(B)}$ si $P(B)>0$"
    ]
   },
   {
@@ -74,7 +103,17 @@
    "id": "6d1afa7c",
    "metadata": {},
    "source": [
-    "#### Variable Aleatoria Discreta"
+    "#### Variable Aleatoria Discreta\n",
+    "\n",
+    "Una variable aleatoria es *discreta* si su conjunto de posibles valores es finito o numerable (por ejemplo, $\\mathbb{N}$).\n",
+    "\n",
+    "Se caracteriza por una función de *masa de probabilidad (pmf)* tal que: \n",
+    "\n",
+    "* $p(x)=P(X=x)$ \n",
+    "  \n",
+    "* $p(x)\\geq 0$\n",
+    "\n",
+    "* $\\sum p(x) = 1$"
    ]
   },
   {
@@ -82,7 +121,17 @@
    "id": "258c55b7",
    "metadata": {},
    "source": [
-    "#### Variable Aleatoria Continua"
+    "#### Variable Aleatoria Continua\n",
+    "\n",
+    "Una variable aleatoria es *continua* si puede tomar un número infinito no numerable de valores en un intervalo de $\\mathbb{R}$.\n",
+    "\n",
+    "Se caracteriza por una función de *densidad de probabilidad (fdp)* $f(x)$ tal que:\n",
+    "\n",
+    "* $f(x) \\geq 0$\n",
+    "  \n",
+    "* $\\int_{-\\infty}^{+\\infty}f(x)dx = 1$\n",
+    "  \n",
+    "* $P(a\\leq X \\geq b) = \\int_{a}^{b}f(x)dx$"
    ]
   },
   {
@@ -90,7 +139,48 @@
    "id": "241945c7",
    "metadata": {},
    "source": [
-    "#### Momentos"
+    "#### Momentos y FGM\n",
+    "\n",
+    "Los *Momentos*, resumen características importantes de la distribución de una variable aleatoria. Se clasifican en: \n",
+    "\n",
+    "* Primer Momento : Esperanza Matemática (promedio esperado de $X$)\n",
+    "  \n",
+    "\\begin{equation*}\n",
+    "\\mathbb{E}(X) = \\mu =\\begin{cases} \\sum_{x}x\\cdot p(x) & \\textsf{si } X \\textsf{es discreta} \\\\\n",
+    "\\int_{-\\infty}^{+\\infty}x\\cdot f(x)dx & \\textsf{si } X \\textsf{ es continua} \\end{cases}\n",
+    "\\end{equation*}\n",
+    "\n",
+    "* Segundo Momento : Varianza \n",
+    "\n",
+    "\\begin{equation*}\n",
+    "\\mathbb{Var}(X) = \\mathbb{E}[(X-\\mu)^2] =\\begin{cases} \\sum_{x}(x-\\mu)^2 \\cdot p(x) & \\textsf{si } X \\textsf{es discreta} \\\\\n",
+    "\\int_{-\\infty}^{+\\infty}(x-\\mu)^2 \\cdot f(x)dx & \\textsf{si } X \\textsf{ es continua} \\end{cases}\n",
+    "\\end{equation*}\n",
+    "\n",
+    "\n",
+    "Sea $X$ una variable aleatoria. La *Función Generadora de Momentos (FGM)* de $X$, denotada por: \n",
+    "\n",
+    "\\begin{equation*}\n",
+    "M_{X}(t) = \\mathbb{E}[e^{tX}]\n",
+    "\\end{equation*}\n",
+    "\n",
+    "se define para aquellos valores de $t$ en los que esta esperanza existe (es decir, converge).\n",
+    "\n",
+    "**¿Cémo puedo obtener los momentos a partir de FGM?**\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "\\mu_{k}' = M_{X}(t) = \\mathbb{E}[e^{tX}]\n",
+    "\\end{equation*}\n",
+    "\n",
+    "Esto, significa que el $k$-esimo momento respecto al origen es simplemente la $k$-esima derivada de la FGM evaluada en $t=0$, por ejemplo :\n",
+    "\n",
+    "* **`Media`** $\\mu = \\mathbb{E}[X] = M_{X}(0)'$ \n",
+    "  \n",
+    "* **`Varianza`** $\\sigma^2 = \\mathbb{E}[X^2] - \\mathbb{E}[X]^2 = M_{X}(0)'' - (M_{X}(0)')^2$ \n",
+    "\n",
+    "* **`Asimetria`** $\\mu_3 = \\mathbb{E}[(X-\\mu)^3] = \\mathbb{E}[X^3]-3\\mu\\mathbb{E}[X^2] + 2\\mu^3$\n",
+    "  \n",
+    "* **`Kurtosis`** $\\mu_4 = \\mathbb{E}[X^4] - 4\\mu\\mathbb{E}[X^3]+6\\mu\\mathbb{E}[X^2]-3\\mu^4$"
    ]
   },
   {
@@ -103,7 +193,9 @@
     "El *muestreo* es un método que nos permite obtener información sobre la población a partir de las estadísticas de un subconjunto de la población (muestra), sin tener que investigar a cada individuo \n",
     "\n",
     "<tr>\n",
-    "<td><img src=\"../figs/sampling.png\" style=\"width: 1000px;\"/> </td>\n",
+    "<center>\n",
+    "<td><img src=\"../figs/sampling.png\" style=\"width: 600px;\"/> </td>\n",
+    "</center>\n",
     "</tr>\n",
     "\n",
     "### Proceso de Muestreo\n",
@@ -423,6 +515,45 @@
     "<td><img src=\"../figs/galton3.png\" style=\"width: 500px;\"/> </td>\n",
     "</center>\n",
     "</tr>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "ddb29f32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Media muestral de los retornos de Google\n",
+    "precios  = yf.download('GOOGL', start = '2020-01-01', end = '2023-01-01', progress = False)['Close']\n",
+    "retornos = precios.pct_change().dropna()*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3752384",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6922276996673415\n",
+      "0.480061128835729\n",
+      "0.01765930926125301\n",
+      "0.006962681795627551\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_sample = [2, 50, 100, 500]\n",
+    "\n",
+    "for n in n_sample:\n",
+    "    # Muestras aleatorias de los retornos\n",
+    "    smp = retornos['GOOGL'].sample(n, replace = True)\n",
+    "    # Media Muestral de los retornos\n",
+    "    print(smp.mean()) "
    ]
   },
   {
