agrega forma matricial

--- a/clase_06/regression.ipynb
+++ b/clase_06/regression.ipynb
@@ -2124,7 +2124,286 @@
    "id": "01f18343",
    "metadata": {},
    "source": [
-    "Próxima clase !"
+    "Cuando revisamos el modelo simple (con una sola variable explicativa), teniamos el siguiente modelo.\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "y_{i} = \\beta_{0} + \\beta_{1}x_{i,1} + \\epsilon_{i} \n",
+    "\\end{equation*}\n",
+    "\n",
+    "Y la explicacion que encontramos, es que la variable $y$ estaria siendo explicada por una constante $\\beta_0$, la variable $x_1$ con un coeficiente $\\beta_1$ y una perturbacion aleatoria $\\epsilon$ \n",
+    "\n",
+    "**Problema ⚠️** Dado que el modelo de regresión simple solo tiene en cuenta una variable explicativa $x$ podemos estar sobre-estimando o infra-estimando el efecto de una variación en la variable $x_1$ causa en la variable explicada $y$.\n",
+    "\n",
+    "El caso del modelo de regresión múltiple (con múltiples variables explicativas), se define como:\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "y_{i} = \\beta_{0} + \\beta_{1}x_{i,1} + \\beta_{2}x_{i,2} + \\cdots + + \\beta_{k}x_{i,k}\\epsilon_{i} \n",
+    "\\end{equation*}\n",
+    "\n",
+    "La diferencia, es que en esta formulación, estamos considerando que $y$, no solo depende de $x_1$, sino que puede depender de multples variables explicativas $\\{x_1, x_2,\\cdots x_k\\}$ y cada uno con su respectivo $\\beta_{k}$ asociado. Sin embargo en el caso del modelo múltiple existe un inconveniente ; *A medida que aumenta el número de variables, el cálculo de los estimadores de los $\\beta$ se hace engorroso*\n",
+    "\n",
+    "Consideremos la siguiente extensión del modelo simple a múltiples variables.\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "\\begin{aligned}\n",
+    "y_{1} &= \\beta_{0} + \\beta_{1}x_{11} + \\beta_{2}x_{12} + \\beta_{3}x_{13} + \\cdots + \\beta_{k}x_{1k} + \\epsilon_{1} \\\\\n",
+    "y_{2} &= \\beta_{0} + \\beta_{1}x_{21} + \\beta_{2}x_{22} + \\beta_{3}x_{23} + \\cdots + \\beta_{k}x_{2k} + \\epsilon_{2} \\\\\n",
+    "y_{3} &= \\beta_{0} + \\beta_{1}x_{31} + \\beta_{2}x_{32} + \\beta_{3}x_{33} + \\cdots + \\beta_{k}x_{3k} + \\epsilon_{3} \\\\\n",
+    "y_{4} &= \\beta_{0} + \\beta_{1}x_{41} + \\beta_{2}x_{42} + \\beta_{3}x_{43} + \\cdots + \\beta_{k}x_{4k} + \\epsilon_{4} \\\\\n",
+    "\\ldots & \\quad\\ldots\\quad\\ldots\\quad\\ldots\\quad\\ldots\\quad\\ldots\\quad\\ldots\\quad\\ldots \\\\\n",
+    "y_{n} &= \\beta_{0} + \\beta_{1}x_{n1} + \\beta_{2}x_{n2} + \\beta_{3}x_{n3} + \\cdots + \\beta_{nk}x_{nk} + \\epsilon_{n} \n",
+    "\\end{aligned}\n",
+    "\\end{equation*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8978a567",
+   "metadata": {},
+   "source": [
+    "El sistema de ecuaciones anterior, se puede escribir de forma matricial como:\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "\\underbrace{\\begin{bmatrix}\n",
+    "y_1     \\\\\n",
+    "y_2     \\\\\n",
+    "y_3     \\\\\n",
+    "y_4     \\\\\n",
+    "\\vdots  \\\\\n",
+    "y_n     \\\\\n",
+    "            \\end{bmatrix}\n",
+    "            }_{Y_{n\\times 1}}\n",
+    "                =\n",
+    "\\underbrace{\\begin{bmatrix}\n",
+    "1       &   x_{11}  & x_{12} & x_{13} & \\dots     &   x_{1k}       \\\\\n",
+    "1       &   x_{21}  & x_{22} & x_{23} & \\dots     &   x_{2k}       \\\\\n",
+    "1       &   x_{31}  & x_{32} & x_{33} & \\dots     &   x_{3k}       \\\\\n",
+    "1       &   x_{41}  & x_{42} & x_{43} & \\dots     &   x_{4k}       \\\\\n",
+    "\\vdots  &  \\vdots   & \\vdots & \\vdots  & \\vdots  &   \\vdots  \\\\   \n",
+    "1       &   x_{n1}  & x_{n2} & x_{n3} &\\dots     &   x_{nk}       \\\\\n",
+    "            \\end{bmatrix}\n",
+    "            }_{X_{n\\times k}}\n",
+    "\\underbrace{\\begin{bmatrix}\n",
+    "\\beta_0     \\\\\n",
+    "\\beta_1     \\\\\n",
+    "\\beta_2     \\\\\n",
+    "\\beta_3     \\\\\n",
+    "\\vdots  \\\\\n",
+    "\\beta_k     \\\\\n",
+    "            \\end{bmatrix}\n",
+    "            }_{\\beta_{k\\times 1}}\n",
+    "                +\n",
+    "\\underbrace{\\begin{bmatrix}\n",
+    "\\epsilon_1     \\\\\n",
+    "\\epsilon_2     \\\\\n",
+    "\\epsilon_3     \\\\\n",
+    "\\epsilon_4     \\\\\n",
+    "\\vdots  \\\\\n",
+    "\\epsilon_n     \\\\\n",
+    "            \\end{bmatrix}\n",
+    "            }_{\\epsilon_{n\\times 1}}\n",
+    "\\end{equation*}\n",
+    "\n",
+    "En otras palabras, podemos escribir tal modelo en forma reducida como $Y=X\\beta + \\epsilon$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c63d64b2",
+   "metadata": {},
+   "source": [
+    "El modelo estimado que predice para la observación i-ésima es:\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "\\widehat{y_{i}} = \\widehat{\\beta_{0}} + \\widehat{\\beta_{1}}x_{1i} + \n",
+    "\\widehat{\\beta_{2}}x_{2i} + \\cdots + \\widehat{\\beta_{k}}x_{1k}\n",
+    "\\end{equation*} \n",
+    "\n",
+    "El error del modelo viene dado por:\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "\\epsilon_{i} = y_{i} - \\left(\\widehat{\\beta_{0}} + \\widehat{\\beta_{1}}x_{1i} + \n",
+    "\\widehat{\\beta_{2}}x_{2i} + \\cdots + \\widehat{\\beta_{k}}x_{1k}\\right)\n",
+    "\\end{equation*} \n",
+    "\n",
+    "Donde $\\widehat{\\beta_{0}},\\widehat{\\beta_{1}},\\cdots,\\widehat{\\beta_{k}}$ \n",
+    "son los valores estimados del modelo múltiple.\n",
+    "\n",
+    "El criterio de mínimos cuadrados asigna $\\widehat{\\beta_{0}},\\widehat{\\beta_{1}},\\cdots,\\widehat{\\beta_{k}}$ el valor que minimiza la suma de errores al cuadrado de todas las observaciones.\n",
+    "\n",
+    "Así como podemos escribir el modelo de la forma $Y=X\\beta + \\epsilon$, de la misma\n",
+    "manera podemos escribir el modelo ajustado, es decir, $\\widehat{Y} = X\\widehat{\\beta}$ con $Y-\\widehat{Y} = \\epsilon$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "989a96d1",
+   "metadata": {},
+   "source": [
+    "### Estimación de Coeficientes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1ce6534",
+   "metadata": {},
+   "source": [
+    "Sea el modelo $y_{i} = \\beta_{0} + \\beta_{1}x_{i1} + \\beta_{2}x_{i2} + \\cdots + \\beta_{k} x_{ik} + \\epsilon_{i}$. Para el caso del modelo simple, vimos que podemos escribir la suma de cuadrado de los errores de la siguiente forma:\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "S = \\sum_{i=1}^{n}\\widehat{\\epsilon_{i}}^2 = \\sum_{i=1}^{n}\\left(\n",
+    "    y_{i} - \\widehat{\\beta_{0}} + \\widehat{\\beta_{1}}x_{1i} + \n",
+    "    \\widehat{\\beta_{2}}x_{2i} + \\cdots + \\widehat{\\beta_{k}}x_{1k} \\right)^2\n",
+    "\\end{equation*}\n",
+    "\n",
+    "Para aplicar el criterio de mínimos cuadrados en el modelo de regresión múltiple, \n",
+    "calculamos la primera derivada de $S$ con respecto a cada $\\beta_{j}$, es decir.\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "\\begin{aligned}\n",
+    "\\frac{\\partial S}{\\partial\\widehat{\\beta_{0}}} &= \n",
+    "2\\sum_{i=1}^{n}\\left(\n",
+    "    y_{i} - \\widehat{\\beta_{0}} + \\widehat{\\beta_{1}}x_{1i} + \n",
+    "    \\widehat{\\beta_{2}}x_{2i} + \\cdots + \\widehat{\\beta_{k}}x_{1k} \\right)(-1) \\\\ \n",
+    "\\frac{\\partial S}{\\partial\\widehat{\\beta_{1}}} &= \n",
+    "2\\sum_{i=1}^{n}\\left(\n",
+    "    y_{i} - \\widehat{\\beta_{0}} + \\widehat{\\beta_{1}}x_{1i} + \n",
+    "    \\widehat{\\beta_{2}}x_{2i} + \\cdots + \\widehat{\\beta_{k}}x_{1k} \\right)(-x_{1i}) \\\\ \n",
+    "\\frac{\\partial S}{\\partial\\widehat{\\beta_{2}}} &= \n",
+    "2\\sum_{i=1}^{n}\\left(\n",
+    "    y_{i} - \\widehat{\\beta_{0}} + \\widehat{\\beta_{1}}x_{1i} + \n",
+    "    \\widehat{\\beta_{2}}x_{2i} + \\cdots + \\widehat{\\beta_{k}}x_{1k} \\right)(-x_{2i}) \\\\\n",
+    "\\cdots & \\cdots\\quad\\quad\\cdots\\cdots\\quad\\quad\\cdots\\cdots\\quad\\cdots\\cdots\\quad \\cdots\\cdots\\quad\\cdots\\cdots\\\\\n",
+    "\\frac{\\partial S}{\\partial\\widehat{\\beta_{k}}} &= \n",
+    "2\\sum_{i=1}^{n}\\left(\n",
+    "    y_{i} - \\widehat{\\beta_{0}} + \\widehat{\\beta_{1}}x_{1i} + \n",
+    "    \\widehat{\\beta_{2}}x_{2i} + \\cdots + \\widehat{\\beta_{k}}x_{1k} \\right)(-x_{ki})\n",
+    "\\end{aligned}\n",
+    "\\end{equation*}\n",
+    "\n",
+    "Los estimadores mínimos cuadrados se obtienen al igualar a 0 las derivadas anteriores.\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "\\begin{aligned}\n",
+    "\\sum_{i=1}^{n}&\\left(\n",
+    "    y_{i} - \\widehat{\\beta_{0}} + \\widehat{\\beta_{1}}x_{1i} + \n",
+    "    \\widehat{\\beta_{2}}x_{2i} + \\cdots + \\widehat{\\beta_{k}}x_{1k} \\right) = 0 \\\\ \n",
+    "\\sum_{i=1}^{n}&\\left(\n",
+    "    y_{i} - \\widehat{\\beta_{0}} + \\widehat{\\beta_{1}}x_{1i} + \n",
+    "    \\widehat{\\beta_{2}}x_{2i} + \\cdots + \\widehat{\\beta_{k}}x_{1k} \\right)x_{1i} = 0 \\\\ \n",
+    "\\sum_{i=1}^{n}&\\left(\n",
+    "    y_{i} - \\widehat{\\beta_{0}} + \\widehat{\\beta_{1}}x_{1i} + \n",
+    "    \\widehat{\\beta_{2}}x_{2i} + \\cdots + \\widehat{\\beta_{k}}x_{1k} \\right)x_{2i} = 0 \\\\\n",
+    "\\cdots & \\cdots\\quad\\quad\\cdots\\cdots\\quad\\quad\\cdots\\cdots\\quad\\quad\\cdots\\cdots\\quad\\cdots\\cdots\\quad  \\\\\n",
+    "\\sum_{i=1}^{n}&\\left(\n",
+    "    y_{i} - \\widehat{\\beta_{0}} + \\widehat{\\beta_{1}}x_{1i} + \n",
+    "    \\widehat{\\beta_{2}}x_{2i} + \\cdots + \\widehat{\\beta_{k}}x_{1k} \\right)x_{ki}=0 \n",
+    "\\end{aligned}\n",
+    "\\end{equation*}\n",
+    "\n",
+    "Resolviendo las sumatorias se tiene el siguiente sistema de ecuaciones.\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "\\begin{aligned}\n",
+    "\\sum_{i=1}^{n}&y_{i} -n\\widehat{\\beta_0} - \\widehat{\\beta_1}\\sum_{i=1}^{n}x_{i1} - \n",
+    "\\widehat{\\beta_2}\\sum_{i=1}^{n}x_{i2} -\\cdots - \\widehat{\\beta_k}\\sum_{i=1}^{n}x_{ik}=0 \\\\\n",
+    "\\sum_{i=1}^{n}&y_{i}x_{i1} -\\widehat{\\beta_0}\\sum_{i=1}^{n}x_{i1} - \n",
+    "\\widehat{\\beta_1}\\sum_{i=1}^{n}x_{i1}^2 - \\widehat{\\beta_2}\\sum_{i=1}^{n}x_{i2}x_{i1} \n",
+    "-\\cdots - \\widehat{\\beta_k}\\sum_{i=1}^{n}x_{ik}x_{i1}=0\\\\\n",
+    "\\sum_{i=1}^{n}&y_{i}x_{i2} -\\widehat{\\beta_0}\\sum_{i=1}^{n}x_{i2} - \n",
+    "\\widehat{\\beta_1}\\sum_{i=1}^{n}x_{i1}x_{i2} - \\widehat{\\beta_2}\\sum_{i=1}^{n}x_{i2}^2 \n",
+    "-\\cdots - \\widehat{\\beta_k}\\sum_{i=1}^{n}x_{ik}x_{i2}=0\\\\\n",
+    "\\sum_{i=1}^{n}&y_{i}x_{i13} -\\widehat{\\beta_0}\\sum_{i=1}^{n}x_{i3} - \n",
+    "\\widehat{\\beta_1}\\sum_{i=1}^{n}x_{i1}x_{i3} - \\widehat{\\beta_2}\\sum_{i=1}^{n}x_{i2}x_{i3}\n",
+    "-\\cdots - \\widehat{\\beta_k}\\sum_{i=1}^{n}x_{ik}x_{i3}=0 \\\\\n",
+    "\\cdots&\\cdots\\quad\\quad\\cdots\\cdots\\quad\\quad\\cdots\\cdots\\quad\\quad\\cdots\\cdots\\quad\\cdots \\\\\n",
+    "\\sum_{i=1}^{n}&y_{i}x_{i1k} -\\widehat{\\beta_0}\\sum_{i=1}^{n}x_{ik} - \n",
+    "\\widehat{\\beta_1}\\sum_{i=1}^{n}x_{i1}x_{ik} - \\widehat{\\beta_2}\\sum_{i=1}^{n}x_{i2}x_{ik} \n",
+    "-\\cdots - \\widehat{\\beta_k}\\sum_{i=1}^{n}x_{ik}^2=0\n",
+    "\\end{aligned}\n",
+    "\\end{equation*}\n",
+    "\n",
+    "Resolviendo las sumatorias se tiene el siguiente sistema de ecuaciones.\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "\\begin{aligned}\n",
+    "\\sum_{i=1}^{n}y_{i} &= n\\widehat{\\beta_0} + \\widehat{\\beta_1}\\sum_{i=1}^{n}x_{i1} + \n",
+    "\\widehat{\\beta_2}\\sum_{i=1}^{n}x_{i2} + \\cdots + \\widehat{\\beta_k}\\sum_{i=1}^{n}x_{ik} \\\\\n",
+    "\\sum_{i=1}^{n}y_{i}x_{i1} &= \\widehat{\\beta_0}\\sum_{i=1}^{n}x_{i1} + \n",
+    "\\widehat{\\beta_1}\\sum_{i=1}^{n}x_{i1}^2 + \\widehat{\\beta_2}\\sum_{i=1}^{n}x_{i2}x_{i1} + \n",
+    "\\cdots + \\widehat{\\beta_k}\\sum_{i=1}^{n}x_{ik}x_{i1} \\\\\n",
+    "\\sum_{i=1}^{n}y_{i}x_{i2} &= \\widehat{\\beta_0}\\sum_{i=1}^{n}x_{i2} + \n",
+    "\\widehat{\\beta_1}\\sum_{i=1}^{n}x_{i1}x_{i2} + \\widehat{\\beta_2}\\sum_{i=1}^{n}x_{i2}^2 +\n",
+    "\\cdots + \\widehat{\\beta_k}\\sum_{i=1}^{n}x_{ik}x_{i2} \\\\\n",
+    "\\sum_{i=1}^{n}y_{i}x_{i13} &= \\widehat{\\beta_0}\\sum_{i=1}^{n}x_{i3} + \n",
+    "\\widehat{\\beta_1}\\sum_{i=1}^{n}x_{i1}x_{i3} + \\widehat{\\beta_2}\\sum_{i=1}^{n}x_{i2}x_{i3} +\n",
+    "\\cdots + \\widehat{\\beta_k}\\sum_{i=1}^{n}x_{ik}x_{i3} \\\\\n",
+    "\\cdots & \\cdots\\quad\\quad\\cdots\\cdots\\quad\\quad\\cdots\\cdots\\quad\\quad\\cdots\\cdots\\quad\\cdots\\\\\n",
+    "\\sum_{i=1}^{n}y_{i}x_{i1k} &= \\widehat{\\beta_0}\\sum_{i=1}^{n}x_{ik} + \n",
+    "\\widehat{\\beta_1}\\sum_{i=1}^{n}x_{i1}x_{ik} + \\widehat{\\beta_2}\\sum_{i=1}^{n}x_{i2}x_{ik} +\n",
+    "\\cdots + \\widehat{\\beta_k}\\sum_{i=1}^{n}x_{ik}^2\n",
+    "\\end{aligned}\n",
+    "\\end{equation*}\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "\\underbrace{\\begin{bmatrix}\n",
+    "\\sum_{i=1}^{n}y_{i}     \\\\\n",
+    "\\sum_{i=1}^{n}y_{i}x_{i1}    \\\\\n",
+    "\\sum_{i=1}^{n}y_{i}x_{i2}     \\\\\n",
+    "\\vdots  \\\\\n",
+    "\\sum_{i=1}^{n}y_{i}x_{i1k}    \\\\\n",
+    "            \\end{bmatrix}\n",
+    "            }_{X^{T}Y}\n",
+    "                =\n",
+    "\\underbrace{\\begin{bmatrix}\n",
+    "n  & \\sum_{i=1}^{n}x_{i1} & \\sum_{i=1}^{n}x_{i2} &  \\dots & \\sum_{i=1}^{n}x_{ik} \\\\\n",
+    "\\sum_{i=1}^{n}x_{i1} & \\sum_{i=1}^{n}x_{i1}^2  & \\sum_{i=1}^{n}x_{i2}x_{i1} & \\dots &   \\sum_{i=1}^{n}x_{ik}x_{i1} \\\\\n",
+    "\\sum_{i=1}^{n}x_{i2} & \\sum_{i=1}^{n}x_{i1}x_{i2} & \\sum_{i=1}^{n}x_{i2}^2 & \\dots &   \\sum_{i=1}^{n}x_{ik}x_{i2}       \\\\\n",
+    "\\vdots  &  \\vdots   & \\vdots & \\vdots  & \\vdots  &   \\vdots  \\\\   \n",
+    "\\sum_{i=1}^{n}x_{ik} & \\sum_{i=1}^{n}x_{i1}x_{ik} & \\sum_{i=1}^{n}x_{i2}x_{ik}  & \\dots &   \\sum_{i=1}^{n}x_{ik}^2\n",
+    "            \\end{bmatrix}\n",
+    "            }_{X^{T}X}\n",
+    "\\underbrace{\\begin{bmatrix}\n",
+    "\\widehat{\\beta_0}     \\\\\n",
+    "\\widehat{\\beta_1}     \\\\\n",
+    "\\widehat{\\beta_2}     \\\\\n",
+    "\\vdots  \\\\\n",
+    "\\widehat{\\beta_k}     \\\\\n",
+    "            \\end{bmatrix}\n",
+    "            }_{\\widehat{\\beta}}\n",
+    "\\end{equation*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15b414a6",
+   "metadata": {},
+   "source": [
+    "Resumiendo, tenemos que:\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "X^{T}Y= X^{T}X\\widehat{\\beta} \n",
+    "\\end{equation*}\n",
+    "\n",
+    "No obstante, para poder encontrar los coeficientes $\\beta_{j}$ del vector \n",
+    "$\\widehat{\\beta}$, la matrix $X^{T}X$ debe cumplir una condición necesaria, esta debe ser **invertible**.\n",
+    "\n",
+    "* **Definición 1:** Una matriz $A$ de orden $n$ se dice que es *invertible*, *no singular* o *regular* si existe otra matriz cuadrada de orden $n$ llamada *matriz inversa* de $A$ representada como $A^{-1}$ tal que $A\\cdot A^{-1}=A^{-1}\\cdot A=I_{n}$ donde $I_{n}$ es la matriz identidad de orden $n$ y el producto\n",
+    "de matrices, es el producto de matrices usual. \n",
+    "\n",
+    "* **Definición 2** El rango de una matriz es el número máximo de columnas que son linealmente independientes.\n",
+    "\n",
+    "* **Observación** Una matriz A es invertible *si y solo si* su rango es completo. Es decir $\\hbox{rang}(A)=k$ con $k$ columnas linealmente independientes.\n",
+    "Para obtener los estimadores del modelo, basta con pre-multiplicar por su inversa, es decir $(X^{T}X)^{-1}$, luego:\n",
+    "$$ (X^{T}X)^{-1}X^{T}Y= \\underbrace{(X^{T}X)^{-1}X^{T}X}_{I_{n}}\\widehat{\\beta} $$\n",
+    "\n",
+    "Por lo tanto, los estimadores del modelo múltiple son:\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "\\widehat{\\beta} = (X^{T}X)^{-1}X^{T}Y\n",
+    "\\end{equation*}\n",
+    "\n",
+    "En el caso de la regresión lineal con una sola variable, bajo el supuesto de normalidad, $\\epsilon \\sim \\mathcal{N}(0,\\sigma^2)$, sin embargo, ahora en el caso múltiple, esta definición cambia a que $\\epsilon \\sim \\mathcal{N}(0,\\sigma^2 I_{n})$, donde $I_{n}$ es la matriz identidad de orden $n$."
    ]
   }
  ],
