agrega forma matricial

--- a/clase_06/regression.ipynb
+++ b/clase_06/regression.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "Andrés C. Medina Sanhueza\n",
     "\n",
-    "Senior Datascientist Engineer \n",
+    "Senior Data Scientist Engineer \n",
     "\n",
     "anmedinas@gmail.com"
    ]
@@ -84,7 +84,7 @@
     "y = \\beta_0 + \\beta_1 x_1 + \\epsilon\n",
     "\\end{equation*}\n",
     "\n",
-    "La interpretación del modelo anterior, es que la variable $y$ (variable observada) estaría siendo explicada por una constane $\\beta_0$, una variable $x_1$ con un coeficiente $\\beta_1$ y un error\n",
+    "La interpretación del modelo anterior, es que la variable $y$ (variable observada) estaría siendo explicada por una constante $\\beta_0$, una variable $x_1$ con un coeficiente $\\beta_1$ y un error\n",
     "$\\epsilon$.\n",
     "\n",
     "Por otro lado, cuando hablemos de  *regresión múltiple*, estaremos hablando de modelos con múltiples variables explicativas\n",
