update notebook clase 6

--- a/clase_06/regression.ipynb
+++ b/clase_06/regression.ipynb
@@ -1502,7 +1502,11 @@
     "\n",
     "a) Escoja 100 valores de $x$ usando ``scipy`` para generar a partir de una distribución uniforme entre 5 y 20.\n",
     "\n",
-    "b) Acto seguido, genere 100 observaciones aleatorias de $\\epsilon$  a partir de una distribución normal con media 0 y varianza 4."
+    "b) Acto seguido, genere 100 observaciones aleatorias de $\\epsilon$  a partir de una distribución normal con media 0 y varianza 4.\n",
+    "\n",
+    "c) Calcule los estimadores $\\beta^{*}$ y $\\tilde{\\beta}$.\n",
+    "\n",
+    "d) Repita el procedimiento a-b-c 5.000 veces y almacene los valores de $\\beta^{*}$ y $\\tilde{\\beta}$. Compare las distribuciones que se generan. Utilice histogramas para visualizar la distribución muestral de $\\beta^{*}$ y  $\\tilde{\\beta}$. ¿Qué puede concluir de este ejercicio?"
    ]
   },
   {
