--- a/clase_06/regression.ipynb
+++ b/clase_06/regression.ipynb
@@ -2640,6 +2640,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "190e38ef",
+   "metadata": {},
+   "source": [
+    "* Tasa a 2 años (GS2) o a 5 años (GS5): Permiten analizar la pendiente de la curva de tasas y expectativas de política monetaria.\n",
+    "  \n",
+    "* Spread 10Y-2Y: Diferencia entre la tasa a 10 años y la de 2 años. Es un indicador clásico de expectativas económicas y riesgo de recesión.\n",
+    "  \n",
+    "* CPI (Índice de Precios al Consumidor, por ejemplo CPIAUCSL en FRED): La inflación afecta el valor real de los pagos de los bonos.\n",
+    "\n",
+    "* VIX: Índice de volatilidad del S&P 500. Un aumento en la volatilidad suele aumentar la demanda por bonos del Tesoro.\n",
+    "\n",
+    "* Precio o retornos del S&P 500 (^GSPC en Yahoo Finance): En periodos de caídas bursátiles, los bonos suelen actuar como refugio."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "id": "95404289",
