correcion prueba de hipotesis

--- a/clase_06/regression.ipynb
+++ b/clase_06/regression.ipynb
@@ -4217,7 +4217,7 @@
     "\n",
     "\\begin{equation*}\n",
     "\\begin{aligned}\n",
-    "\\textsf{H}_0 &: \\beta_1 = \\beta_2 = \\cdots = \\beta_k 0 \\\\\n",
+    "\\textsf{H}_0 &: \\beta_1 = \\beta_2 = \\cdots = \\beta_k = 0 \\\\\n",
     "\\textsf{H}_1 &: \\beta_i \\neq 0 \\quad\\hbox{para algún}\\quad k\n",
     "\\end{aligned}\n",
     "\\end{equation*}\n",
